--- a/templates/env.erb
+++ b/templates/env.erb
@@ -1,11 +1,25 @@
-IMPALA_CATALOG_SERVICE_HOST=<%= scope.lookupvar('impala::catalog_hostname') %>
-IMPALA_STATE_STORE_HOST=<%= scope.lookupvar('impala::catalog_hostname') %>
+<% keytab = scope.lookupvar('impala::keytab') -%>
+IMPALA_CATALOG_SERVICE_HOST=<%= @catalog_hostname %>
+IMPALA_STATE_STORE_HOST=<%= @statestore_hostname %>
 IMPALA_STATE_STORE_PORT=24000
 IMPALA_BACKEND_PORT=22000
 IMPALA_LOG_DIR=/var/log/impala
 
-IMPALA_CATALOG_ARGS=" -log_dir=${IMPALA_LOG_DIR} "
+<% if @realm -%>
+IMPALA_CATALOG_ARGS=" \
+    -log_dir=${IMPALA_LOG_DIR} \
+    -state_store_host=${IMPALA_STATE_STORE_HOST} \
+    -principal=impala/<%= @catalog_hostname -%>@<%= @realm -%> \
+    -keytab_file <%= keytab -%>"
+IMPALA_STATE_STORE_ARGS=" \
+    -log_dir=${IMPALA_LOG_DIR} \
+    -state_store_port=${IMPALA_STATE_STORE_PORT} \
+    -principal=impala/<%= @statestore_hostname -%>@<%= @realm -%> \
+    -keytab_file <%= keytab -%>"
+<% else -%>
+IMPALA_CATALOG_ARGS=" -log_dir=${IMPALA_LOG_DIR} -state_store_host=${IMPALA_STATE_STORE_HOST} "
 IMPALA_STATE_STORE_ARGS=" -log_dir=${IMPALA_LOG_DIR} -state_store_port=${IMPALA_STATE_STORE_PORT}"
+<% end -%>
 IMPALA_SERVER_ARGS=" \
     -log_dir=${IMPALA_LOG_DIR} \
     -catalog_service_host=${IMPALA_CATALOG_SERVICE_HOST} \
@@ -14,7 +28,11 @@ IMPALA_SERVER_ARGS=" \
     -state_store_host=${IMPALA_STATE_STORE_HOST} \
     -be_port=${IMPALA_BACKEND_PORT}"
 
+<% if @debug_enable -%>
+ENABLE_CORE_DUMPS=true
+<% else -%>
 ENABLE_CORE_DUMPS=false
+<% end -%>
 
 # LIBHDFS_OPTS=-Djava.library.path=/usr/lib/impala/lib
 # MYSQL_CONNECTOR_JAR=/usr/share/java/mysql-connector-java.jar
