Finalize support for security, document the problems.

--- a/templates/env.erb
+++ b/templates/env.erb
@@ -1,32 +1,40 @@
-<% keytab = scope.lookupvar('impala::keytab') -%>
-IMPALA_CATALOG_SERVICE_HOST=<%= @catalog_hostname %>
-IMPALA_STATE_STORE_HOST=<%= @statestore_hostname %>
+IMPALA_CATALOG_SERVICE_HOST=<%= scope.lookupvar('impala::catalog_hostname') %>
+IMPALA_STATE_STORE_HOST=<%= scope.lookupvar('impala::statestore_hostname') %>
 IMPALA_STATE_STORE_PORT=24000
 IMPALA_BACKEND_PORT=22000
-IMPALA_LOG_DIR=/var/log/impala
+IMPALA_LOG_DIR=<%= scope.lookupvar('impala::logdir') %>
 
-<% if @realm -%>
+<% parameters = scope.lookupvar('impala::_parameters') -%>
 IMPALA_CATALOG_ARGS=" \
-    -log_dir=${IMPALA_LOG_DIR} \
-    -state_store_host=${IMPALA_STATE_STORE_HOST} \
-    -principal=impala/<%= @catalog_hostname -%>@<%= @realm -%> \
-    -keytab_file <%= keytab -%>"
-IMPALA_STATE_STORE_ARGS=" \
-    -log_dir=${IMPALA_LOG_DIR} \
-    -state_store_port=${IMPALA_STATE_STORE_PORT} \
-    -principal=impala/<%= @statestore_hostname -%>@<%= @realm -%> \
-    -keytab_file <%= keytab -%>"
+<% parameters['catalog'].keys.each do |p| -%>
+<% value = parameters['catalog'][p] -%>
+<% if value.empty? -%>
+    -<%= p -%> \
 <% else -%>
-IMPALA_CATALOG_ARGS=" -log_dir=${IMPALA_LOG_DIR} -state_store_host=${IMPALA_STATE_STORE_HOST} "
-IMPALA_STATE_STORE_ARGS=" -log_dir=${IMPALA_LOG_DIR} -state_store_port=${IMPALA_STATE_STORE_PORT}"
+    -<%= p -%>=<%= value -%> \
 <% end -%>
+<% end -%>
+"
+IMPALA_STATE_STORE_ARGS=" \
+<% parameters['statestore'].keys.each do |p| -%>
+<% value = parameters['statestore'][p] -%>
+<% if value.empty? -%>
+    -<%= p -%> \
+<% else -%>
+    -<%= p -%>=<%= value -%> \
+<% end -%>
+<% end -%>
+"
 IMPALA_SERVER_ARGS=" \
-    -log_dir=${IMPALA_LOG_DIR} \
-    -catalog_service_host=${IMPALA_CATALOG_SERVICE_HOST} \
-    -state_store_port=${IMPALA_STATE_STORE_PORT} \
-    -use_statestore \
-    -state_store_host=${IMPALA_STATE_STORE_HOST} \
-    -be_port=${IMPALA_BACKEND_PORT}"
+<% parameters['server'].keys.each do |p| -%>
+<% value = parameters['server'][p] -%>
+<% if value.empty? -%>
+    -<%= p -%> \
+<% else -%>
+    -<%= p -%>=<%= value -%> \
+<% end -%>
+<% end -%>
+"
 
 <% if @debug_enable -%>
 ENABLE_CORE_DUMPS=true
