--- a/templates/env.erb
+++ b/templates/env.erb
@@ -1,3 +1,4 @@
+HOSTNAME=<%= @fqdn %>
 IMPALA_CATALOG_SERVICE_HOST=<%= scope.lookupvar('impala::catalog_hostname') %>
 IMPALA_STATE_STORE_HOST=<%= scope.lookupvar('impala::statestore_hostname') %>
 IMPALA_STATE_STORE_PORT=24000
